--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,21 +1,31 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
             
     
-    <wb-module deploy-name="woofsandwhiskersss">
+    <wb-module deploy-name="woofsandwhisker">
                         
         
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
                         
         
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
+                
         <dependent-module archiveName="mysql-connector-j-9.3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/C:/Users/DELL/Downloads/mysql-connector-j-9.3.0/mysql-connector-j-9.3.0/mysql-connector-j-9.3.0.jar">
+                        
+            <dependency-type>uses</dependency-type>
+                    
+        </dependent-module>
+        <dependent-module archiveName="jakarta.servlet.jsp.jstl-2.0.0.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/C:/Users/DELL/Downloads/jakarta.servlet.jsp.jstl-2.0.0.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="jakarta.servlet.jsp.jstl-api-2.0.0.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/C:/Users/DELL/Downloads/jakarta.servlet.jsp.jstl-api-2.0.0.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
                         
         
-        <property name="java-output-path" value="/woofsandwhiskersss/build/classes"/>
-                
-        <property name="context-root" value="woofsandwhiskersss"/>
+        <property name="context-root" value="woofsandwhisker"/>
+                        
+        
+        <property name="java-output-path" value="/woofsandwhisker/build/classes"/>
                     
     
     </wb-module>
